// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input adornment 1`] = `
<div
  class="ohu-input has-start-adornment has-border is-normal"
>
  <div
    class="ohu-input__adornment"
  >
    <span>
      kg
    </span>
  </div>
  <input
    class="ohu-input__base"
    placeholder=""
    type="text"
  />
  <div
    class="ohu-input__adornment"
  >
    <svg
      aria-hidden="true"
      class="ohu-icon"
      focusable="false"
      role="presentation"
      tabindex="-1"
      title="edit-box"
      viewBox="0 0 24 24"
    >
      <path
        d="M0 0h24v24H0z"
        fill="none"
      />
      <path
        d="M16.757 3l-7.466 7.466.008 4.247 4.238-.007L21 7.243V20a1 1 0 0 1-1 1H4a1 1 0 0 1-1-1V4a1 1 0 0 1 1-1h12.757zm3.728-.9L21.9 3.516l-9.192 9.192-1.412.003-.002-1.417L20.485 2.1z"
      />
    </svg>
  </div>
</div>
`;

exports[`Input allowClear 1`] = `
<div
  class="ohu-input has-border is-normal"
>
  <input
    class="ohu-input__base"
    placeholder=""
    type="text"
  />
  <div
    class="ohu-input__adornment is-button"
    tabindex="-1"
  >
    <button
      class="ohu-btn is-round is-default is-link is-md is-icon-only"
      role="button"
      tabindex="-1"
    >
      <i>
        <svg
          aria-hidden="true"
          class="ohu-icon"
          focusable="false"
          role="presentation"
          tabindex="-1"
          title="close-circle"
          viewBox="0 0 24 24"
        >
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
          <path
            d="M12 22C6.477 22 2 17.523 2 12S6.477 2 12 2s10 4.477 10 10-4.477 10-10 10zm0-11.414L9.172 7.757 7.757 9.172 10.586 12l-2.829 2.828 1.415 1.415L12 13.414l2.828 2.829 1.415-1.415L13.414 12l2.829-2.828-1.415-1.415L12 10.586z"
          />
        </svg>
      </i>
    </button>
  </div>
</div>
`;

exports[`Input allowTogglePassword 1`] = `
<div
  class="ohu-input has-border is-normal"
>
  <input
    class="ohu-input__base"
    placeholder=""
    type="password"
  />
  <div
    class="ohu-input__adornment is-button"
    tabindex="-1"
  >
    <button
      class="ohu-btn is-round is-default is-link is-md is-icon-only"
      role="button"
      tabindex="-1"
    >
      <i>
        <svg
          aria-hidden="true"
          class="ohu-icon"
          focusable="false"
          role="presentation"
          tabindex="-1"
          title="eye-close"
          viewBox="0 0 24 24"
        >
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
          <path
            d="M9.342 18.782l-1.931-.518.787-2.939a10.988 10.988 0 0 1-3.237-1.872l-2.153 2.154-1.415-1.415 2.154-2.153a10.957 10.957 0 0 1-2.371-5.07l1.968-.359C3.903 10.812 7.579 14 12 14c4.42 0 8.097-3.188 8.856-7.39l1.968.358a10.957 10.957 0 0 1-2.37 5.071l2.153 2.153-1.415 1.415-2.153-2.154a10.988 10.988 0 0 1-3.237 1.872l.787 2.94-1.931.517-.788-2.94a11.072 11.072 0 0 1-3.74 0l-.788 2.94z"
          />
        </svg>
      </i>
    </button>
  </div>
</div>
`;

exports[`Input allowTogglePassword 2`] = `
<div
  class="ohu-input has-border is-normal"
>
  <input
    class="ohu-input__base"
    placeholder=""
    type="password"
  />
  <div
    class="ohu-input__adornment is-button"
    tabindex="-1"
  >
    <button
      class="ohu-btn is-round is-default is-link is-md is-icon-only"
      role="button"
      tabindex="-1"
    >
      <i>
        <svg
          aria-hidden="true"
          class="ohu-icon"
          focusable="false"
          role="presentation"
          tabindex="-1"
          title="eye-close"
          viewBox="0 0 24 24"
        >
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
          <path
            d="M9.342 18.782l-1.931-.518.787-2.939a10.988 10.988 0 0 1-3.237-1.872l-2.153 2.154-1.415-1.415 2.154-2.153a10.957 10.957 0 0 1-2.371-5.07l1.968-.359C3.903 10.812 7.579 14 12 14c4.42 0 8.097-3.188 8.856-7.39l1.968.358a10.957 10.957 0 0 1-2.37 5.071l2.153 2.153-1.415 1.415-2.153-2.154a10.988 10.988 0 0 1-3.237 1.872l.787 2.94-1.931.517-.788-2.94a11.072 11.072 0 0 1-3.74 0l-.788 2.94z"
          />
        </svg>
      </i>
    </button>
  </div>
</div>
`;

exports[`Input basic 1`] = `
<div
  class="ohu-input has-border is-normal"
>
  <input
    class="ohu-input__base"
    placeholder=""
    type="text"
  />
</div>
`;

exports[`Input buttonAdornment 1`] = `
<div
  class="ohu-input has-border is-normal"
>
  <input
    class="ohu-input__base"
    placeholder=""
    type="text"
  />
  <div
    class="ohu-input__adornment is-auto"
  >
    <button
      class="ohu-btn is-default is-lg is-block"
      role="button"
      tabindex="0"
    />
  </div>
</div>
`;

exports[`Input disabled and readony 1`] = `
<div
  class="ohu-input has-border is-normal is-disabled"
>
  <input
    class="ohu-input__base"
    disabled="disabled"
    placeholder=""
    readonly="readonly"
    type="text"
  />
</div>
`;

exports[`Input noBorder 1`] = `
<div
  class="ohu-input is-normal"
>
  <input
    class="ohu-input__base"
    placeholder=""
    type="text"
  />
</div>
`;

exports[`Input outline 1`] = `
<div
  class="ohu-input has-border is-outline"
>
  <input
    class="ohu-input__base"
    placeholder=""
    type="text"
  />
</div>
`;

exports[`Input textarea 1`] = `
<div
  class="ohu-input has-border is-normal"
>
  <textarea
    class="ohu-input__base"
    cols="4"
    placeholder=""
    rows="2"
  />
</div>
`;
